force-app/main/default/objects/Task/fields/Care_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Task_Type__c</fullName>
    <label>Care Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adherence check</fullName>
            </value>
            <value>
                <fullName>Reading request</fullName>
            </value>
            <value>
                <fullName>Diet counselling</fullName>
            </value>
            <value>
                <fullName>Lab test</fullName>
            </value>
            <value>
                <fullName>Follow-up booking</fullName>
            </value>
            <value>
                <fullName>LTFU call</fullName>
            </value>
            <value>
                <fullName>Extraction verification</fullName>
            </value>
            <value>
                <fullName>Talk to care team</fullName>
            </value>
            <value>
                <fullName>Doctor review</fullName>
            </value>
            <value>
                <fullName>Safety follow-up</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>