force-app/main/default/objects/Task/fields/Journey_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Journey_Cycle__c</fullName>
    <label>Cycle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>