force-app/main/default/objects/Task/fields/Message_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Message_Sent_At__c</fullName>
    <label>Message Sent At</label>
    <type>DateTime</type>
</CustomField>