force-app/main/default/objects/Task/fields/Patient_Facing__c.field-meta.xml
<CustomField>
    <fullName>Patient_Facing__c</fullName>
    <label>Patient Facing</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>