force-app/main/default/objects/Task/fields/Template_Step_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Step_Id__c</fullName>
    <label>Template Step ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>