force-app/main/default/objects/Task/TSK_LTFU_Needs_Reason.validationRule-meta.xml
<ValidationRule>
<fullName>TSK_LTFU_Needs_Reason</fullName>
<active>true</active>
<errorConditionFormula>ISPICKVAL(Care_Task_Type__c,'LTFU call') &amp;&amp; IsClosed &amp;&amp; ISBLANK(Patient_Response__c)</errorConditionFormula>
<errorMessage>Record the lost-to-follow-up reason before closing.</errorMessage>
</ValidationRule>